unpackaged/main/default/objects/TrackerEvents__c/TrackerEvents__c.object-meta.xml
<CustomObject>
    <label>Tracker Events</label>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracker Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>