unpackaged/main/default/objects/TrackerEvents__c/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <description>BrandId</description>
    <label>BrandId</label>
    <length>3</length>
    <type>Text</type>
</CustomField>