unpackaged/main/default/objects/TrackerEvents__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tracker Events</relationshipLabel>
    <relationshipName>TrackerEvents</relationshipName>
    <type>Lookup</type>
</CustomField>