unpackaged/main/default/objects/TrackerEvents__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>CustomerId</description>
    <label>CustomerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>