unpackaged/main/default/objects/TrackerEvents__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <label>DataSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>