unpackaged/main/default/objects/TrackerEvents__c/fields/LoyaltyId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyId__c</fullName>
    <description>LoyaltyId</description>
    <label>LoyaltyId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>