unpackaged/main/default/objects/TrackerEvents__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>