unpackaged/main/default/objects/TrackerEvents__c/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>StoreCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>