unpackaged/main/default/objects/TrackerEvents__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SignUp,</fullName>
            </value>
            <value>
                <fullName>Unsubscribe,</fullName>
            </value>
            <value>
                <fullName>News-letter SignUp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>